WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28172
fix a typo in platform/graphics/skia/PlatformContextSkia.cpp
https://bugs.webkit.org/show_bug.cgi?id=28172
Summary
fix a typo in platform/graphics/skia/PlatformContextSkia.cpp
Shinichiro Hamaji
Reported
2009-08-11 00:37:20 PDT
If has the following line: #ifdef SK_DEBUGx The macro should be SK_DEBUG, I think.
Attachments
Patch v1
(1.13 KB, patch)
2009-08-11 00:38 PDT
,
Shinichiro Hamaji
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinichiro Hamaji
Comment 1
2009-08-11 00:38:42 PDT
Created
attachment 34543
[details]
Patch v1 --- 2 files changed, 13 insertions(+), 1 deletions(-)
Eric Seidel (no email)
Comment 2
2009-08-12 15:56:05 PDT
Comment on
attachment 34543
[details]
Patch v1 Clearing flags on attachment: 34543 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/platform/graphics/skia/PlatformContextSkia.cpp Committed
r47157
M WebCore/ChangeLog M WebCore/platform/graphics/skia/PlatformContextSkia.cpp
r47157
= 26175092e7df7fdb43ae216e3e6bcfa058bb59d0 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/47157
Eric Seidel (no email)
Comment 3
2009-08-12 15:56:08 PDT
All reviewed patches have been landed. Closing bug.
David Levin
Comment 4
2009-08-13 03:20:06 PDT
This patch broke Chromium Linux so I had to roll it out:
http://trac.webkit.org/changeset/47189
Adam, would you investigate or find someone to do so?
Adam Langley
Comment 5
2009-08-13 10:52:33 PDT
Upstreamed:
http://codereview.appspot.com/105103
David Levin
Comment 6
2009-08-20 23:26:57 PDT
Refreshing bugzilla's memory loss: This got another patch added to it by Stephen White which was r+ by Eric and then Committed
r47607
: <
http://trac.webkit.org/changeset/47607
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug