2009-08-12  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Dan Bernstein.

        fix a typo in platform/graphics/skia/PlatformContextSkia.cpp
        https://bugs.webkit.org/show_bug.cgi?id=28172

        No new tests because it's a just typo fix.

        * platform/graphics/skia/PlatformContextSkia.cpp:
        (PlatformContextSkia::setupPaintCommon):

git-svn-id: svn://svn.chromium.org/blink/trunk@47157 bbb929c8-8fbe-4397-9dbb-9b2b20218538