third_party/WebKit/WebCore/platform/graphics/skia/PlatformContextSkia.cpp
@@ -296,7 +296,7 @@ void PlatformContextSkia::drawRect(SkRect rect)
 
 void PlatformContextSkia::setupPaintCommon(SkPaint* paint) const
 {
-#ifdef SK_DEBUGx
+#ifdef SK_DEBUG
     {
         SkPaint defaultPaint;
         SkASSERT(*paint == defaultPaint);
